--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add recents/images.json
+          git add -f recents/images.json
           if git diff --staged --quiet; then
             echo "No changes to images.json"
           else
